overflow issue resolved but transition is buggy as shit

--- a/styles/MenuPage.module.scss
+++ b/styles/MenuPage.module.scss
@@ -47,6 +47,7 @@ $menu-page-container-minHeight: 90vh;
 .menuTabActive .menuTabUnderline {
 	transform: scaleX(1);
 }
+
 .menuPageContainer {
 	width: min(calc(100% - 6rem), 980px);
 	max-width: min(100%, 980px);
@@ -72,22 +73,27 @@ $menu-page-container-minHeight: 90vh;
 	margin: 1rem 0;
 }
 
+.menuPageTabRelWrapper {
+	position: relative;
+}
+
 .menuPageTab {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	visibility: hidden;
+	// visibility: hidden;
 	position: absolute;
 	top: 0;
-	left: 50%;
-	opacity: 0;
+	// left: 50%;
 	width: $menu-page-container-width;
 	max-width: $menu-page-container-maxwidth;
 	min-height: $menu-page-container-minHeight;
-	transition: opacity 0.7s ease-in-out;
-	transform: translateX(-50%);
 	margin-bottom: 2rem;
+	// opacity: 0;
+	// transition: opacity 0.7s ease-in-out;
+	transform: translateX(100vw);
 }
+
 .menuPageTab_visible {
 	visibility: visible;
 	opacity: 1;
