--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,24 @@
 	font-family: "Source Serif Pro", serif;
 }
 
+body {
+	width: 100vw;
+	overflow-x: hidden;
+	overflow-y: visible;
+}
+
 .titleFont {
 	font-family: "Dancing Script", cursive;
 }
+
+// #_next {
+// 	overflow-x: hidden;
+// }
+
+// Delete later
+// BUG: DELETE... ADDED FOR UI TESTING.
+// #menuPageTab1-id {
+// 	transform: translateX(-50%);
+// 	opacity: 1;
+// 	visibility: visible;
+// }
